Use virtual threads in EventManagerImpl